# rebrief

./: .cursorignore  .cursorrules  .gitignore  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  pyproject.toml
.cursor/commands/: 1com.md  2com.md  3com.md
rebrief/: cli.py
rebrief.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
rebrief/core/: reporter.py
rebrief/parsers/: git_log.py  risks.py  rules.py  stack.py
scripts/: publish.ps1  publish.sh  test_drive.py
tests/: test_cli.py  test_git_log.py  test_reporter.py  test_risks.py  test_rules.py  test_stack.py
