[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rebrief"
version = "0.1.0"
description = "CLI utility for locally auditing AI-generated repositories and generating REBRIEF.md handoff reports"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "click>=8.1",
    "colorama>=0.4",
]

[project.scripts]
rebrief = "rebrief.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["rebrief*"]
