[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rebrief"
version = "0.1.1"
description = "CLI utility for locally auditing AI-generated repositories and generating REBRIEF.md handoff reports"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "click>=8.1",
    "rich>=13.0",
]

[project.scripts]
rebrief = "rebrief.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8.0"]
publish = ["build>=1.0", "twine>=5.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["rebrief*"]
exclude = ["tests*"]
